Makefile now compiles 32-bit binaries
Turns out that Amazon EMR (small & medium instances) have 32-bit
processors.

--- a/data/Makefile
+++ b/data/Makefile
@@ -5,7 +5,7 @@ SHELL = /bin/sh
 CXX = g++
 
 # Default compiler flags (for C and C++)
-override CFLAGS += -O3 -mtune=generic
+override CFLAGS += -O3 -mtune=generic -m32
 
 # Default compiler flags for C++
 override CXXFLAGS += $(CFLAGS) -std=c++11
